hands-on/Kubernetes/practice/08-dashboard/restricted-user.yaml
# สร้างเนมสเปซสำหรับการทดสอบแอปพลิเคชัน
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard-demo
